      as file paths, and will download as required.  In most cases
      \code{repos = NULL} can be deduced from the extension of the URL.
      
      \item The warning when using partial matching with the \code{$}
      operator on data frames is now only given when
      \code{options("warnPartialMatchDollar")} is \code{TRUE}.
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item \command{configure} option \option{--with-internal-tzcode}
      can now be used with variable \code{rsharedir}.

      \item The included version of PCRE has been updated to 8.35.

      \item There is a new target \command{make uninstall-libR} to
      remove an installed shared/static \file{libR}.

       \command{make install-libR} now works if a sub-architecture is
       used, although the user will need to specify \code{libdir}
       differently for different sub-architectures.

       \item There is more extensive advice on which LaTeX packages are
       required to install \R or to make package manuals (as done by
       \command{R CMD check}) in the \sQuote{Writing R Extensions}
       manual.

       \item Compilers were handling the visibility control in
       \file{src/extra/xz} inconsistently, so it has been simplified.
       (\PR{15327})
     }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{dbinom(x,n)}, \code{pbinom()}, \code{dpois()}, etc,
      are slightly less restrictive in checking if \code{n} is
      integer-valued.  (Wish of \PR{15734}.)

      \item \code{pchisq(x, df, ncp, log.p = TRUE)} is more accurate and
      no longer underflows for small \code{x} and \code{ncp < 80}, e.g,
      for \code{pchisq(1e-5, df = 100, ncp = 1, log = TRUE)}.
      (Based on \PR{15635} and a suggestion by Roby Joehanes.)

      \item The \code{s} (\dQuote{step into}) command in the debugger
      would cause \R to step into expressions evaluated there,
      not just into functions being debugged.  (\PR{15770})
